# DotEngine

./: .gitignore
demo/: CMakeLists.txt
demo/src/: main.cpp
src/dot_engine/: body_interface.hpp  body_interfaces.hpp  collision_sorter.hpp  engine.hpp  interfaces.hpp  physic_multithread_helper.hpp  physic_thread.hpp  system_interface.hpp
src/dot_engine/components/body/: dynamic_rigid_body.hpp  limited_dynamic_rigid_body.hpp  static_rigid_body.hpp
src/dot_engine/components/collision_effect/: blocking.hpp
src/dot_engine/components/force/: jump.hpp  link.hpp  run.hpp  targeted_force.hpp
src/dot_engine/components/universal_law/: drag.hpp  gravity.hpp
src/dot_engine/utils/: destroyable.hpp  float2d.hpp
